[gd_scene load_steps=2 format=3 uid="uid://cqhjjjifp1oc5"]

[ext_resource type="Script" uid="uid://bafme0kykajru" path="res://scenes/shop/skin_button.gd" id="1_ckksm"]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -63.5
offset_right = 50.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckksm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="SkinSprite" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Skin"
horizontal_alignment = 1

[node name="ActionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Comprar"
